Changed to_metaflow to use remote experiment tracking

--- a/nbs/engine.ipynb
+++ b/nbs/engine.ipynb
@@ -52,6 +52,8 @@
     "from tinydb.storages import MemoryStorage\n",
     "\n",
     "from sciflow.experiment.lake_experiment import (\n",
+    "    CSVArtifact,\n",
+    "    ImageArtifact,\n",
     "    LakeExperiment,\n",
     ")\n",
     "from sciflow.experiment.tracking import FlowTracker, StepTracker\n",
@@ -124,8 +126,10 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "def create_test_flow_run(run_id):\n",
-    "    flow_tracker = FlowTracker(_bucket_name, _base_key, run_id, [\"engine-test-1\"])\n",
+    "def create_test_flow_run(run_id, run_name=None):\n",
+    "    flow_tracker = FlowTracker(\n",
+    "        _bucket_name, _base_key, run_id, [\"engine-test-1\"], run_name=run_name\n",
+    "    )\n",
     "    flow_tracker.start()\n",
     "    tracker = StepTracker(_bucket_name, _base_key, run_id, \"engine-test-1\")\n",
     "    with tracker.capture_out() as tracker._output_file:\n",
@@ -152,7 +156,7 @@
     "_run_id_2 = f\"engine_{str(uuid.uuid4())[-6:]}\"\n",
     "\n",
     "create_test_flow_run(_run_id)\n",
-    "create_test_flow_run(_run_id_2)"
+    "create_test_flow_run(_run_id_2, \"engine-test\")"
    ]
   },
   {
@@ -210,9 +214,8 @@
     "            )\n",
     "        if experiment_id:\n",
     "            query_stmt += f\" where dir0 = '{str(experiment_id)}'\"\n",
-    "        # TODO add find by name\n",
-    "        #         elif experiment_name:\n",
-    "        #             query_stmt += f\" where name = '{experiment_name}'\"\n",
+    "        elif experiment_name:\n",
+    "            query_stmt += f\" where experiment_name = '{experiment_name}'\"\n",
     "        if order_by:\n",
     "            query_stmt += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
@@ -387,14 +390,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ex1 = engine.find_by_id(_run_id)\n",
-    "# assert len(ex1.metrics) == 1\n",
-    "# assert ex1.metrics[\"recall\"].iloc[0] == 0.87\n",
-    "# assert type(ex1.metrics) == dict\n",
-    "# assert len(ex1.artifacts.values()) == 4\n",
-    "# artifact_types = [type(t) for t in ex1.artifacts.values()]\n",
-    "# assert CSVArtifact in artifact_types\n",
-    "# assert ImageArtifact in artifact_types"
+    "ex1 = engine.find_by_id(_run_id)\n",
+    "assert len(ex1.metrics) == 1\n",
+    "assert ex1.metrics[\"recall\"].iloc[0] == 0.87\n",
+    "assert type(ex1.metrics) == dict\n",
+    "artifact_types = [type(t) for t in ex1.artifacts.values()]\n",
+    "assert CSVArtifact in artifact_types\n",
+    "assert ImageArtifact in artifact_types"
    ]
   },
   {
@@ -403,13 +405,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "#     ex_ids = (_run_id,)\n",
-    "#     exs = engine.find_by_ids(ex_ids)\n",
-    "# except ValueError:\n",
-    "#     pass\n",
-    "# ex_ids = (_run_id, _run_id)\n",
-    "# assert len(engine.find_by_ids(ex_ids)) == 2"
+    "try:\n",
+    "    ex_ids = (_run_id,)\n",
+    "    exs = engine.find_by_ids(ex_ids)\n",
+    "except ValueError:\n",
+    "    pass\n",
+    "ex_ids = (_run_id, _run_id_2)\n",
+    "assert len(engine.find_by_ids(ex_ids)) == 2"
    ]
   },
   {
@@ -418,8 +420,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert [ex.experiment_id for ex in loader.find_latest()] == [sample_id_2, sample_id_1]\n",
-    "# assert [ex.experiment_id for ex in loader.find_latest(n=1)] == [sample_id_2]"
+    "assert [ex.experiment_id for ex in engine.find_latest()][:2] == [_run_id_2, _run_id]\n",
+    "assert [ex.experiment_id for ex in engine.find_latest(n=1)] == [_run_id_2]"
    ]
   },
   {
@@ -428,10 +430,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert len(loader.find_all()) == 2\n",
-    "# assert sorted([ex.experiment_id for ex in loader.find_all()]) == sorted(\n",
-    "#     [sample_id_2, sample_id_1]\n",
-    "# )"
+    "assert len(engine.find_all()) >= 2\n",
+    "tracked_ids = set([_run_id_2, _run_id])\n",
+    "tracked_intersect = list(\n",
+    "    tracked_ids.intersection(set([ex.experiment_id for ex in engine.find_all()]))\n",
+    ")\n",
+    "assert len(tracked_intersect) == 2"
    ]
   },
   {
@@ -440,10 +444,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "#     assert len(loader.find_by_name(\"laketest\")) is None\n",
-    "# except DatabaseError:\n",
-    "#     print(\"Table not found\")"
+    "try:\n",
+    "    assert len(engine.find_by_name(\"laketest\")) is None\n",
+    "except DatabaseError:\n",
+    "    print(\"Table not found\")"
    ]
   },
   {
@@ -452,7 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert len(loader.find_by_name(experiment_name)) == 2"
+    "# assert len(engine.find_by_name(\"engine-test\")) >= 1"
    ]
   },
   {
@@ -461,8 +465,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert len(loader.find_by_config_key(\"recipient\", \"test\")) == 2\n",
-    "# assert loader.find_by_config_key(\"recipient\", \"hello\") is None"
+    "# assert len(engine.find_by_config_key(\"test_set_size\", \"25\")) == 2\n",
+    "# assert engine.find_by_config_key(\"test_set_size\", \"hello\") is None"
    ]
   },
   {
@@ -471,8 +475,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert len(loader.find_by_key(\"experiment\", \"name\", \"lake_experiment_loader\")) == 2\n",
-    "# assert loader.find_by_key(\"experiment\", \"mainfile\", \"extest.py\") is None"
+    "# assert engine.find_by_key(\"experiment\", \"name\", \"engine-test\").experiment_id == _run_id_2\n",
+    "# assert engine.find_by_key(\"experiment\", \"name\", \"blabla\") is None"
    ]
   }
  ],
