--- a/nbs/to_metaflow.ipynb
+++ b/nbs/to_metaflow.ipynb
@@ -32,6 +32,7 @@
     "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
     "\n",
+    "import numpy as np\n",
     "from fastcore.script import Param, call_parse\n",
     "from nbdev.export import find_default_export, get_config, nbglob, read_nb\n",
     "\n",
@@ -79,7 +80,9 @@
     "def rename_steps_for_metaflow(steps):\n",
     "    for i, step in enumerate(steps):\n",
     "        if i == 0:\n",
-    "            step.name = \"start\""
+    "            step.name = \"start\"\n",
+    "        elif i == len(steps) - 1:\n",
+    "            step.name = \"end\""
    ]
   },
   {
@@ -109,7 +112,7 @@
    "source": [
     "assert [\"first\", \"preprocess\", \"train\", \"last\"] == [step.name for step in steps]\n",
     "rename_steps_for_metaflow(steps)\n",
-    "assert [\"start\", \"preprocess\", \"train\", \"last\"] == [step.name for step in steps]"
+    "assert [\"start\", \"preprocess\", \"train\", \"end\"] == [step.name for step in steps]"
    ]
   },
   {
@@ -127,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_path = Path(os.path.join(\"test\", \"test_multistep.ipynb\"))\n",
+    "nb_path = Path(os.path.join(\"test\", \"test_tracking.ipynb\"))\n",
     "nb = read_nb(nb_path)\n",
     "module_name = find_default_export(nb[\"cells\"]).replace(\".\", \"/\")\n",
     "test_module = os.path.join(get_config().path(\"lib_path\"), f\"{module_name}.py\")\n",
@@ -223,111 +226,27 @@
     "            flow_file.write(\n",
     "                f\"from {fq_module_name} import {', '.join(params.keys())}\\n\"\n",
     "            )\n",
-    "\n",
     "        if track_experiment:\n",
-    "            flow_file.write(\"from sacred import Experiment\\n\")\n",
-    "            flow_file.write(\n",
-    "                \"from sciflow.experiment.lake_observer import AWSLakeObserver\\n\"\n",
-    "            )\n",
-    "            flow_file.write(\"import time\")\n",
-    "            write_observers(\n",
-    "                lib_name,\n",
-    "                flow_file,\n",
-    "                module_name,\n",
-    "                os.environ[\"SCIFLOW_BUCKET\"],\n",
-    "                get_config().get(\"lib_name\"),\n",
-    "            )\n",
+    "            flow_file.write(f\"from sciflow.experiment.tracking import StepTracker\\n\")\n",
+    "            flow_file.write(f\"import sys\\n\")\n",
+    "            flow_file.write(f\"import tempfile\\n\")\n",
     "\n",
     "        flow_file.write(f\"\\n\\nclass {flow_class_name}(FlowSpec):\\n\")\n",
-    "        single_indent = \"    \"\n",
-    "        write_params(flow_file, param_meta, single_indent)\n",
-    "        if track_experiment:\n",
-    "            flow_file.write(f\"{single_indent}artifacts = []\\n\")\n",
-    "            flow_file.write(f\"{single_indent}metrics = []\\n\")\n",
+    "        ind = \"    \"\n",
+    "        write_params(flow_file, param_meta, ind, track_experiment)\n",
     "        flow_file.write(\"\\n\")\n",
     "        write_steps(\n",
     "            flow_file,\n",
     "            steps,\n",
     "            orig_step_names,\n",
     "            param_meta,\n",
-    "            single_indent,\n",
+    "            ind,\n",
     "            track_experiment,\n",
     "        )\n",
-    "        write_track_flow(flow_file, track_experiment)\n",
     "        flow_file.write(\"\\n\")\n",
     "\n",
     "        flow_file.write('if __name__ == \"__main__\":\\n')\n",
-    "        flow_file.write(f\"{single_indent}{flow_class_name}()\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def write_observers(lib_name, flow_file, module_name, bucket_name, project):\n",
-    "    experiment_name = extract_module_only(module_name)\n",
-    "    sacred_setup = f\"\"\"\n",
-    "\n",
-    "ex = Experiment(\"{experiment_name}\")\n",
-    "# TODO inject observers\n",
-    "obs = AWSLakeObserver(project=\"{lib_name}\", experiment_name=\"{experiment_name}\")\n",
-    "ex.observers.append(obs)\n",
-    "\n",
-    "@ex.config\n",
-    "def config():\n",
-    "    flow_run_id = None\n",
-    "    artifacts = []\n",
-    "    metrics = []\n",
-    "    \"\"\"\n",
-    "    flow_file.write(sacred_setup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def write_track_flow(flow_file, track_experiment):\n",
-    "    track_flow = \"\"\"\n",
-    "    @step\n",
-    "    def end(self):\n",
-    "        flow_info = {\n",
-    "            \"flow_name\": current.flow_name,\n",
-    "            \"run_id\": current.run_id,\n",
-    "            \"pathspec\": current.pathspec,\n",
-    "            \"namespace\": current.namespace,\n",
-    "            \"username\": current.username,\n",
-    "            \"flow_parameters\": str(current.parameter_names),\n",
-    "            \"run_time_mins\": round((time.time() - self.__getattr__('start_time')) / 60.0, 1)\n",
-    "        }\n",
-    "    \n",
-    "        run = ex.run(config_updates={'artifacts': self.__getattr__('artifacts'),\n",
-    "                                    'metrics': self.__getattr__('metrics')},\n",
-    "                     meta_info = flow_info)\n",
-    "        \n",
-    "    @ex.main\n",
-    "    def track_flow(artifacts, metrics, _run):\n",
-    "        for artifact in artifacts:\n",
-    "            _run.add_artifact(artifact)\n",
-    "        for metric_name, metric_value, step in metrics:\n",
-    "            _run.log_scalar(metric_name, metric_value, step)\n",
-    "    \"\"\"\n",
-    "    if not track_experiment:\n",
-    "        track_flow = \"\"\"\n",
-    "    @step\n",
-    "    def end(self):\n",
-    "        pass\n",
-    "    \"\"\"\n",
-    "    flow_file.write(track_flow)"
+    "        flow_file.write(f\"{ind}{flow_class_name}()\")"
    ]
   },
   {
@@ -339,20 +258,24 @@
     "#  export\n",
     "\n",
     "\n",
-    "def write_params(flow_file, param_meta, single_indent):\n",
+    "def write_params(flow_file, param_meta, ind, track_experiment):\n",
     "    for param in param_meta.keys():\n",
     "        if param_meta[param].is_scalar:\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{param} = Parameter('{param}', default={param})\\n\"\n",
-    "            )\n",
+    "            flow_file.write(f\"{ind}{param} = Parameter('{param}', default={param})\\n\")\n",
     "        elif param_meta[param].is_json_type:\n",
     "            flow_file.write(\n",
-    "                f\"{single_indent}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
+    "                f\"{ind}{param} = Parameter('{param}', default=json.dumps({param}), type=JSONType)\\n\"\n",
     "            )\n",
     "        elif param_meta[param].instance_type == PosixPath:\n",
     "            flow_file.write(\n",
-    "                f\"{single_indent}{param} = Parameter('{param}', default=str({param}))\\n\"\n",
-    "            )"
+    "                f\"{ind}{param} = Parameter('{param}', default=str({param}))\\n\"\n",
+    "            )\n",
+    "    if track_experiment:\n",
+    "        flow_file.write(f\"{ind}bucket_name = Parameter('bucket_name', required=True)\\n\")\n",
+    "        flow_file.write(\n",
+    "            f\"{ind}flow_base_key = Parameter('flow_base_key', required=True)\\n\"\n",
+    "        )\n",
+    "        flow_file.write(f\"{ind}flow_run_id = Parameter('flow_run_id', required=True)\\n\")"
    ]
   },
   {
@@ -393,14 +316,8 @@
     "    return result\n",
     "\n",
     "\n",
-    "def write_steps(\n",
-    "    flow_file, steps, orig_step_names, param_meta, single_indent, track_experiment\n",
-    "):\n",
+    "def write_steps(flow_file, steps, orig_step_names, param_meta, ind, track_experiment):\n",
     "    for i, step in enumerate(steps):\n",
-    "        flow_file.write(f\"{single_indent}@step\\n\")\n",
-    "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
-    "        if step.docstring:\n",
-    "            flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
     "        # Check for padded step\n",
     "        if i < len(orig_step_names):\n",
     "            flow_step_args = \"\"\n",
@@ -408,29 +325,48 @@
     "                flow_step_args = \", \".join(\n",
     "                    [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
     "                )\n",
-    "            if not step.has_return:\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{single_indent}{orig_step_names[i]}({flow_step_args})\\n\"\n",
+    "\n",
+    "            step_func_call_text = f\"{orig_step_names[i]}({flow_step_args})\"\n",
+    "\n",
+    "            if track_experiment:\n",
+    "                write_track_internal_helper(\n",
+    "                    flow_file, ind, step, orig_step_names[i], step_func_call_text\n",
     "                )\n",
-    "            else:\n",
-    "                if step.return_stmt in param_meta:\n",
-    "                    raise ValueError(\n",
-    "                        f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
+    "\n",
+    "                flow_file.write(f\"{ind}@step\\n\")\n",
+    "                flow_file.write(f\"{ind}def {step.name}(self):\\n\")\n",
+    "                flow_file.write(f\"{ind}{ind}self._{step.name}()\\n\")\n",
+    "                if i < len(steps) - 1:\n",
+    "                    next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
+    "                    flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
+    "                flow_file.write(f\"\\n\")\n",
+    "        else:\n",
+    "            flow_file.write(f\"{ind}@step\\n\")\n",
+    "            flow_file.write(f\"{ind}def {step.name}(self):\\n\")\n",
+    "            if step.docstring:\n",
+    "                flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
+    "\n",
+    "            if i < len(orig_step_names):\n",
+    "                flow_step_args = \"\"\n",
+    "                if len(step.args) > 0:\n",
+    "                    flow_step_args = \", \".join(\n",
+    "                        [format_arg(a, param_meta) for a in step.args.split(\",\")]\n",
     "                    )\n",
-    "                flow_file.write(\n",
-    "                    f\"{single_indent}{single_indent}results = {orig_step_names[i]}({flow_step_args})\\n\"\n",
-    "                )\n",
-    "                write_track_capture(flow_file)\n",
-    "        if i == 0 and track_experiment:\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}self.start_time = time.time()\\n\"\n",
-    "            )\n",
-    "        if i < len(steps):\n",
-    "            next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
-    "            flow_file.write(\n",
-    "                f\"{single_indent}{single_indent}self.next(self.{next_step})\\n\"\n",
-    "            )\n",
-    "        flow_file.write(\"\\n\")"
+    "                if not step.has_return:\n",
+    "                    flow_file.write(\n",
+    "                        f\"{ind}{ind}{orig_step_names[i]}({flow_step_args})\\n\"\n",
+    "                    )\n",
+    "                else:\n",
+    "                    if step.return_stmt in param_meta:\n",
+    "                        raise ValueError(\n",
+    "                            f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
+    "                        )\n",
+    "                    flow_file.write(f\"{ind}{ind}results = {step_func_call_text}\\n\")\n",
+    "                    write_track_capture(flow_file, ind, 2)\n",
+    "            if i < len(steps):\n",
+    "                next_step = \"end\" if i == len(steps) - 1 else steps[i + 1].name\n",
+    "                flow_file.write(f\"{ind}{ind}self.next(self.{next_step})\\n\")\n",
+    "            flow_file.write(\"\\n\")"
    ]
   },
   {
@@ -442,17 +378,66 @@
     "# export\n",
     "\n",
     "\n",
-    "def write_track_capture(flow_file):\n",
+    "def write_track_capture(flow_file, ind, num_indents):\n",
+    "    base_ind = \"\".join(np.repeat(ind, num_indents))\n",
+    "    flow_file.write(f\"{base_ind}for key in results.keys():\\n\")\n",
+    "    flow_file.write(f\"{base_ind}{ind}if key in self.__dict__:\\n\")\n",
     "    flow_file.write(\n",
-    "        f\"\"\"\n",
-    "        for key in results.keys():\n",
-    "            if key in self.__dict__:\n",
-    "                self.__dict__[key] = self.__dict__[key] + results[key]\n",
-    "            else:\n",
-    "                self.__dict__[key] = results[key]\n",
+    "        f\"{base_ind}{ind}{ind}self.__dict__[key] = self.__dict__[key] + results[key]\\n\"\n",
+    "    )\n",
+    "    flow_file.write(f\"{base_ind}{ind}else:\\n\")\n",
+    "    flow_file.write(f\"{base_ind}{ind}{ind}self.__dict__[key] = results[key]\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
     "\n",
-    "\"\"\"\n",
-    "    )"
+    "\n",
+    "def write_track_internal_helper(\n",
+    "    flow_file, ind, step, orig_step_name, step_func_call_text\n",
+    "):\n",
+    "    flow_file.write(f\"{ind}def _{step.name}(self):\\n\")\n",
+    "    if step.docstring:\n",
+    "        flow_file.write(f\"{indent_multiline(step.docstring, 2)}\\n\")\n",
+    "    flow_file.write(f\"{ind}{ind}tracker = None\\n\")\n",
+    "    flow_file.write(f\"{ind}{ind}try:\\n\")\n",
+    "    flow_file.write(\n",
+    "        f'{ind}{ind}{ind}tracker = StepTracker(self.bucket_name, self.flow_base_key, self.flow_run_id, \"{orig_step_name}\")\\n'\n",
+    "    )\n",
+    "    flow_file.write(f\"{ind}{ind}{ind}with tempfile.TemporaryDirectory() as temp_dir:\\n\")\n",
+    "    flow_file.write(\n",
+    "        f\"{ind}{ind}{ind}{ind}with tracker.capture_out() as tracker._output_file:\\n\"\n",
+    "    )\n",
+    "    flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}tracker.start_heartbeat(10.0)\\n\")\n",
+    "\n",
+    "    if not step.has_return:\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}{step_func_call_text}\\n\")\n",
+    "    else:\n",
+    "        if step.return_stmt in param_meta:\n",
+    "            raise ValueError(\n",
+    "                f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
+    "            )\n",
+    "        flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}results = {step_func_call_text}\\n\")\n",
+    "        write_track_capture(flow_file, ind, 5)\n",
+    "\n",
+    "    flow_file.write(f\"{ind}{ind}{ind}{ind}{ind}tracker.completed()\\n\")\n",
+    "    flow_file.write(f\"{ind}{ind}except BaseException:\\n\")\n",
+    "    flow_file.write(f\"{ind}{ind}{ind}if tracker:\\n\")\n",
+    "    flow_file.write(\n",
+    "        f\"{ind}{ind}{ind}{ind}exc_type, exc_value, trace = sys.exc_info()\\n\"\n",
+    "    )\n",
+    "    flow_file.write(\n",
+    "        f'{ind}{ind}{ind}{ind}except_info = {{\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}}\\n'\n",
+    "    )\n",
+    "    flow_file.write(\n",
+    "        f'{ind}{ind}{ind}{ind}tracker.completed(status=\"FAILED\", except_info=except_info)\\n'\n",
+    "    )\n",
+    "    flow_file.write(f\"{ind}{ind}{ind}raise\\n\\n\")"
    ]
   },
   {
@@ -567,6 +552,13 @@
     "def sciflow_metaflow(track: Param(\"Track flows as sacred experiments\", bool) = True):\n",
     "    generate_flows(get_config(), track)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
