--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -58,7 +58,7 @@
     "from sacred.stdout_capturing import get_stdcapturer\n",
     "from sacred.utils import IntervalTimer\n",
     "\n",
-    "from sciflow.s3_utils import list_bucket, load_json, put_data, s3_join\n",
+    "from sciflow.s3_utils import delete_dir, list_bucket, load_json, put_data, s3_join\n",
     "from sciflow.utils import prepare_env"
    ]
   },
@@ -111,31 +111,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create run-entry\n",
-    "# Write run.json\n",
-    "# experiment = experiment_info - sacred.ingredient.experiment_info\n",
-    "# Command = run_flow?\n",
-    "# Config = params?\n",
-    "# meta = startup metadata put in FlowTracker"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# export\n",
     "\n",
     "\n",
     "class FlowTracker:\n",
     "    def __init__(\n",
-    "        self, bucket_name, flow_base_key, flow_run_id, steps, region=\"eu-west-1\"\n",
+    "        self,\n",
+    "        bucket_name,\n",
+    "        flow_base_key,\n",
+    "        flow_run_id,\n",
+    "        steps,\n",
+    "        params=None,\n",
+    "        run_name=None,\n",
+    "        region=\"eu-west-1\",\n",
     "    ):\n",
     "        self.bucket_name = bucket_name\n",
     "        self.flow_base_key = flow_base_key\n",
     "        self.flow_run_id = flow_run_id\n",
     "        self.steps = steps\n",
+    "        self.params = params\n",
+    "        self.run_name = run_name\n",
     "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
@@ -158,12 +153,13 @@
     "        host_info = get_host_info()\n",
     "        run_entry = {\n",
     "            \"experiment_id\": self.flow_run_id,\n",
-    "            \"experiment\": {},\n",
+    "            \"experiment_name\": self.run_name,\n",
+    "            \"experiment\": {\"name\": self.run_name},\n",
     "            \"format\": None,\n",
     "            \"command\": None,\n",
     "            \"host\": host_info,\n",
-    "            \"start_time\": time.time(),\n",
-    "            \"config\": params,\n",
+    "            \"start_time\": round(time.time()),\n",
+    "            \"config\": params if params is not None else {},\n",
     "            \"meta\": {},\n",
     "            \"status\": \"RUNNING\",\n",
     "            \"resources\": [],\n",
@@ -187,6 +183,15 @@
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_table_key, \"run.json\", run_entry\n",
     "        )\n",
+    "        # Create each step entry at flow start - in case of step failure\n",
+    "        for step in self.steps:\n",
+    "            save_json(\n",
+    "                self.s3_res,\n",
+    "                self.bucket_name,\n",
+    "                self.run_entry_key,\n",
+    "                f\"step_{step}.json\",\n",
+    "                run_entry,\n",
+    "            )\n",
     "        print(f\"Started tracking flow: {self.flow_run_id}\")\n",
     "\n",
     "    def interrupted(self):\n",
@@ -206,7 +211,7 @@
     "            self.s3_res, self.bucket_name, s3_join(self.run_entry_key, \"run.json\")\n",
     "        )\n",
     "        run_entry[\"status\"] = event_status\n",
-    "        run_entry[\"stop_time\"] = time.time()\n",
+    "        run_entry[\"stop_time\"] = round(time.time())\n",
     "        run_entry[\"elapsed_time\"] = round(\n",
     "            run_entry[\"stop_time\"] - run_entry[\"start_time\"], 2\n",
     "        )\n",
@@ -228,6 +233,7 @@
     "        captured_out = \"\"\n",
     "        step_entries = {}\n",
     "        for step in self.steps:\n",
+    "            s3_join(self.run_entry_key, f\"step_{step}.json\")\n",
     "            step_entry = load_json(\n",
     "                self.s3_res,\n",
     "                self.bucket_name,\n",
@@ -363,7 +369,7 @@
     "        self.saved_metrics = {}\n",
     "        self.info = {}\n",
     "        self.result = None\n",
-    "        self.start_time = time.time()\n",
+    "        self.start_time = round(time.time())\n",
     "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
@@ -385,7 +391,6 @@
     "            s3_join(self.exp_base_key, \"runs\", \"flow_start_run.json\"),\n",
     "        )\n",
     "        self.run_entry = self.flow_start_run_entry\n",
-    "\n",
     "        self.init_keys()\n",
     "\n",
     "    def start_heartbeat(self, beat_interval=10.0):\n",
@@ -467,7 +472,6 @@
     "    def _emit_heartbeat(self):\n",
     "        beat_time = datetime.datetime.utcnow().isoformat()\n",
     "        self.run_entry[\"heartbeat\"] = beat_time\n",
-    "        print(f\"Emitted heartbeat at: {beat_time}\")\n",
     "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
     "        self.run_entry[\"result\"] = self.result\n",
     "        save_json(\n",
@@ -490,7 +494,7 @@
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
     "        )\n",
     "        self.run_entry[\"status\"] = status\n",
-    "        self.run_entry[\"stop_time\"] = time.time()\n",
+    "        self.run_entry[\"stop_time\"] = round(time.time())\n",
     "        self.run_entry[\"elapsed_time\"] = round(\n",
     "            self.run_entry[\"stop_time\"] - self.start_time, 2\n",
     "        )\n",
@@ -1003,6 +1007,127 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "flow_tracker = FlowTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps)\n",
+    "\n",
+    "try:\n",
+    "    flow_tracker.start()\n",
+    "    flow_tracker.completed()\n",
+    "except (KeyboardInterrupt):\n",
+    "    flow_tracker.interrupted()\n",
+    "    print(f\"Flow interrupted by user: {_flow_run_id}\")\n",
+    "except BaseException:\n",
+    "    exc_type, exc_value, trace = sys.exc_info()\n",
+    "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "    flow_tracker.failed(except_info)\n",
+    "    print(f\"Flow failed: {_flow_run_id}\")\n",
+    "# Exception interrupt handling\n",
+    "# Failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "flow_tracker = FlowTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps)\n",
+    "\n",
+    "try:\n",
+    "    flow_tracker.start()\n",
+    "\n",
+    "    try:\n",
+    "        tracker = StepTracker(_bucket_name, _flow_base_key, _flow_run_id, \"first_step\")\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            with tracker.capture_out() as tracker._output_file:\n",
+    "                raise ValueError()\n",
+    "                tracker.start_heartbeat(1.0)\n",
+    "                tracker.completed()\n",
+    "    except BaseException:\n",
+    "        exc_type, exc_value, trace = sys.exc_info()\n",
+    "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
+    "\n",
+    "    raise ValueError()\n",
+    "except (KeyboardInterrupt):\n",
+    "    flow_tracker.interrupted()\n",
+    "    print(f\"Flow interrupted by user: {_flow_run_id}\")\n",
+    "except BaseException:\n",
+    "    exc_type, exc_value, trace = sys.exc_info()\n",
+    "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "    flow_tracker.failed(except_info)\n",
+    "    print(f\"Flow failed: {_flow_run_id}\")\n",
+    "# Exception interrupt handling\n",
+    "# Failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "flow_tracker = FlowTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps)\n",
+    "\n",
+    "try:\n",
+    "    flow_tracker.start()\n",
+    "\n",
+    "    raise ValueError()\n",
+    "\n",
+    "    flow_tracker.completed()\n",
+    "except (KeyboardInterrupt):\n",
+    "    flow_tracker.interrupted()\n",
+    "    print(f\"Flow interrupted by user: {_flow_run_id}\")\n",
+    "except BaseException:\n",
+    "    exc_type, exc_value, trace = sys.exc_info()\n",
+    "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "    flow_tracker.failed(except_info)\n",
+    "    print(f\"Flow failed: {_flow_run_id}\")\n",
+    "# Exception interrupt handling\n",
+    "# Failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# slow\n",
     "\n",
     "run_entry_key = s3_join(_flow_base_key, _flow_run_id, \"experiment\", \"runs\")\n",
@@ -1022,7 +1147,7 @@
    "outputs": [],
    "source": [
     "# slow\n",
-    "# delete_dir(_s3_res, _bucket_name, _flow_base_key)"
+    "delete_dir(_s3_res, _bucket_name, _flow_base_key)"
    ]
   }
  ],
